Port entity manager & entity properties