@@ -7,8 +7,28 @@ base {
 	archivesName = "${mod_id}-fabric"
 }
 
+sourceSets {
+	testServer {
+		compileClasspath += main.compileClasspath + main.output
+		runtimeClasspath += main.runtimeClasspath + main.output
+		compileClasspath += project(":common").sourceSets.testServer.output
+		runtimeClasspath += project(":common").sourceSets.testServer.output
+	}
+}
+
 loom {
 	accessWidenerPath = project(":common").loom.accessWidenerPath
+
+	runs {
+		testServer {
+			server()
+			source sourceSets.testServer
+			vmArg "--enable-native-access=ALL-UNNAMED"
+			vmArg "-Dfabric-api.gametest"
+			vmArg "-Dfabric-api.gametest.report-file=${project.buildDir}/junit.xml"
+			runDir "build/testServer"
+		}
+	}
 }
 
 repositories {
@@ -25,6 +45,14 @@ configurations {
 		canBeConsumed = false
 	}
 	commonResources {
+		canBeResolved = true
+		canBeConsumed = false
+	}
+	commonTestServerJava {
+		canBeResolved = true
+		canBeConsumed = false
+	}
+	commonTestServerResources {
 		canBeResolved = true
 		canBeConsumed = false
 	}
@@ -45,6 +73,22 @@ dependencies {
 	compileOnly project(":common")
 	commonJava project(path: ":common", configuration: "commonJava")
 	commonResources project(path: ":common", configuration: "commonResources")
+	commonTestServerJava project(path: ":common", configuration: "commonTestServerJava")
+	commonTestServerResources project(path: ":common", configuration: "commonTestServerResources")
+
+	testServerImplementation "com.github.javaparser:javaparser-symbol-solver-core:${project.javaparser_version}"
+	testServerImplementation "org.bitbucket.mstrobel:procyon-compilertools:${project.procyon_version}"
+	testServerImplementation "org.vineflower:vineflower:${project.vineflower_version}"
+}
+
+tasks.named("compileTestServerJava", JavaCompile) {
+	dependsOn(configurations.commonTestServerJava)
+	source(configurations.commonTestServerJava)
+}
+
+tasks.named("processTestServerResources") {
+	dependsOn(configurations.commonTestServerResources)
+	from(configurations.commonTestServerResources)
 }
 
 tasks.named("compileJava", JavaCompile) {
